--- a/appointed_client/pubspec.yaml
+++ b/appointed_client/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
+  flutter_bloc: ^8.1.0
+  equatable: ^2.0.3
   firebase_core: ^3.9.0
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.6.0
